--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
   "name": "rues-api",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "RUES API wrapper",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
-  "author": "",
+  "keywords": [
+    "typescript",
+    "library"
+  ],
+  "author": "Mauricio Robayo",
   "license": "MIT",
-  "devDependencies": {
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
-  }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MauricioRobayo/rues-api"
+  },
+  "bugs": {
+    "url": "https://github.com/MauricioRobayo/rues-api/issues"
+  },
+  "homepage": "https://github.com/MauricioRobayo/rues-api#readme"
 }
