--- a/package.json
+++ b/package.json
@@ -27,5 +27,13 @@
   "bugs": {
     "url": "https://github.com/MauricioRobayo/rues-api/issues"
   },
-  "homepage": "https://github.com/MauricioRobayo/rues-api#readme"
+  "homepage": "https://github.com/MauricioRobayo/rues-api#readme",
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/node": "^22.10.2",
+    "eslint": "^9.17.0",
+    "eslint-plugin-perfectionist": "^4.3.0",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.18.1"
+  }
 }
