--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "lint": "eslint --fix",
-    "format": "prettier --write src",
+    "format": "prettier --write .",
     "test": "vitest run",
     "test:watch": "vitest"
   },
@@ -38,6 +38,7 @@
     "eslint-plugin-perfectionist": "^4.3.0",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
-    "typescript-eslint": "^8.18.1"
+    "typescript-eslint": "^8.18.1",
+    "vitest": "^2.1.8"
   }
 }
