--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "prettier": "3.4.2",
     "typescript-eslint": "^8.18.1",
     "vitest": "^2.1.8"
+  },
+  "dependencies": {
+    "tsup": "^8.3.5"
   }
 }
