--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-perfectionist": "^4.3.0",
     "globals": "^15.14.0",
+    "msw": "^2.7.0",
     "prettier": "3.4.2",
     "typescript-eslint": "^8.18.1",
     "vitest": "^2.1.8"
