remove prod dependency

--- a/package.json
+++ b/package.json
@@ -45,10 +45,8 @@
     "globals": "^15.14.0",
     "msw": "^2.7.0",
     "prettier": "3.4.2",
+    "tsup": "^8.3.5",
     "typescript-eslint": "^8.18.1",
     "vitest": "^2.1.8"
-  },
-  "dependencies": {
-    "tsup": "^8.3.5"
   }
 }
